tests/baselines/reference/cloduleSplitAcrossFiles.errors.txt
cloduleSplitAcrossFiles_module.ts(1,11): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.


==== cloduleSplitAcrossFiles_class.ts (0 errors) ====
    class D { }
    
==== cloduleSplitAcrossFiles_module.ts (1 errors) ====
    namespace D {
              ~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
        export var y = "hi";
    }
    D.y;